
[float]
===== Bug fixes
* Fix failure to parse some forms of the `Implementation-Version` property from jar manifest files - {pull}1931[#1931]
* Ensure single value for context-propagation header - {pull}1937[#1937]
* Fix gRPC non-terminated (therefore non-reported) client spans - {pull}2067[#2067]
* Fix Webflux response status code - {pull}1948[#1948]

[float]
===== Refactorings
* Migrate several plugins to indy dispatcher {pull}2087[#2087], {pull}2088[#2088], {pull}2090[#2090], {pull}2094[#2094], {pull}2095[#2095]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.25.0]]
==== 1.25.0 - 2021/07/22

[float]
===== Potentially breaking changes
* If you rely on instrumentations that are in the `experimental` group, you must now set `enable_experimental_instrumentations=true` otherwise
the experimental instrumentations will be disabled by default. Up to version `1.24.0` using an empty value for `disable_instrumentations` was
the recommended way to override the default `disable_instrumentations=experimental`.

[float]
===== Features
* Support for inheritance of public API annotations - {pull}1805[#1805]
* JDBC instrumentation sets `context.db.instance` - {pull}1820[#1820]
* Add support for Vert.x web client- {pull}1824[#1824]
* Avoid recycling of spans and transactions that are using through the public API, so to avoid
reference-counting-related errors - {pull}1859[#1859]
* Add <<config-enable-experimental-instrumentations>> configuration option to enable experimental features - {pull}1863[#1863]
** Previously, when adding an instrumentation group to `disable_instrumentations`, we had to make sure to not forget the
default `experimental` value, for example when disabling `jdbc` instrumentation we had to set `disable_instrumentations=experimental,jdbc` otherwise
setting `disable_instrumentations=jdbc` would disable jdbc and also enable experimental features, which would not be the desired effect.