@@ -328,6 +328,8 @@ public abstract class AbstractServletContainerIntegrationTest {
             this.currentTestApp = testApp;
             waitFor(testApp.getStatusEndpoint());
             clearMockServerLog();
+            executeStatusRequestAndCheckIgnored(testApp.getStatusEndpoint());
+            clearMockServerLog();
             testApp.test(this);
         }
     }
@@ -363,6 +365,24 @@ public abstract class AbstractServletContainerIntegrationTest {
         return responseString;
     }
 
+    private void executeStatusRequestAndCheckIgnored(String statusEndpoint) throws IOException {
+        Map<String, String> headers = Collections.emptyMap();
+        Response response = executeRequest(statusEndpoint, headers);
+        assertThat(response.code()).isEqualTo(200);
+
+        try {
+            Thread.sleep(200);
+        } catch (InterruptedException e) {
+            // ignored
+        }
+
+        List<JsonNode> transactions = getReportedTransactions();
+        assertThat(transactions.isEmpty())
+            .describedAs("status transaction should be ignored by configuration %s", transactions)
+            .isTrue();
+
+    }
+
     public String executeAndValidatePostRequest(String pathToTest, RequestBody postBody, String expectedContent, Integer expectedResponseCode) throws IOException, InterruptedException {
         Response response = executePostRequest(pathToTest, postBody);
         if (expectedResponseCode != null) {
@@ -381,9 +401,9 @@ public abstract class AbstractServletContainerIntegrationTest {
 
     public Response executePostRequest(String pathToTest, RequestBody postBody) throws IOException {
         return httpClient.newCall(new Request.Builder()
-            .post(postBody)
-            .url(getBaseUrl() + pathToTest)
-            .build())
+                .post(postBody)
+                .url(getBaseUrl() + pathToTest)
+                .build())
             .execute();
     }
 
@@ -391,10 +411,10 @@ public abstract class AbstractServletContainerIntegrationTest {
         Headers headers = Headers.of((headersMap != null) ? headersMap : new HashMap<>());
 
         return httpClient.newCall(new Request.Builder()
-            .get()
-            .url(getBaseUrl() + pathToTest)
-            .headers(headers)
-            .build())
+                .get()
+                .url(getBaseUrl() + pathToTest)
+                .headers(headers)
+                .build())
             .execute();
     }
 
